Fixed spacing issue

--- a/core/sass/pages/capital-invest/_capital-invest-opportunity-page.scss
+++ b/core/sass/pages/capital-invest/_capital-invest-opportunity-page.scss
@@ -41,7 +41,7 @@
 
     .icon-text{
       margin-top: 0;
-      margin-bottom: 0;
+      margin-bottom: $spacing-3;
     }
 
   }
